src/Components/CustomColorPicker/customColorPicker.css
.customPicker {
  top: -40px;
  display: grid;
  grid-gap: 20px;
  grid-template-rows: repeat(1fr);
  position: absolute;
  opacity: 0;
  transition: all 400ms ease-in-out;
  z-index: 5;
  padding: 0px 30px 30px 30px;
}

.hover {
  top: 0;
  opacity: 1;
  padding: 30px;
}

.circle {
  height: 28px;
  width: 28px;
  border-radius: 50%;
  margin: 5px;
  outline: none;
  transition: all 300ms ease;
}

.circle:hover {
  transform: scale(1.2);
}

.block {
  position: absolute;
}

.selectedColor {
  text-align: left;
  font-size: 16px;
  font-family: 'HelveticaNeue-UltraLight';
  color: whitesmoke;
  -moz-user-select: all;
  -webkit-user-select: all;
  -ms-user-select: all;
}

.swatch {
  display: grid;
  grid-gap: 5px;
  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
  grid-template-rows: repeat(1fr);
}

